load("@rules_python//python:defs.bzl", "py_binary")
load("@prompt_deps//:requirements.bzl", "all_requirements")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")

srcs = glob(["**/*.py"])

deps = all_requirements

env = {
    "OPENAI_API_KEY": "file:$(location //sandbox/gcp/secrets:openai_key)",
    "REDIS_HOST": "$(PROMPT_REDIS_HOST)",
    "REDIS_PORT": "$(PROMPT_REDIS_PORT)",
    "REDIS_DB": "$(PROMPT_REDIS_DB)",
}

py_binary(
    name = "start",
    srcs = srcs,
    data = ["//sandbox/gcp/secrets:openai_key"],
    env = env,
    main = ":src/main.py",
    toolchains = ["//sandbox:prompt_env_vars"],
    deps = deps,
)

py3_image(
    name = "prompt_image",
    srcs = srcs,
    main = "src/main.py",
    visibility = ["//visibility:public"],
    deps = deps,
)

exports_files(["requirements.txt"])
